--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ body {
     align-items: center;
     justify-content: center;
 }
-.img-tacaca{
+.img-show{
     width: 300px;
     height: 300px;
 }
@@ -263,7 +263,7 @@ body {
     padding: 5px;
     transition: all 0.4s ease;
 }
-.content-dish:hover{
+.content-dish-active{
   box-shadow: var(--box-shadow-back-shadow);
 }
 .img-dish-mask-shadow{
