--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,13 @@ body {
 
 .content-details {
     display: flex;
+    padding: 20px;
+    background:transparent;
+    flex-direction: column;
+    justify-content: center;
+}
+.content-details-Ingredients-preparation {
+    display: flex;
     width: 100%;
     height: 100%;
     padding: 20px;
@@ -144,7 +151,7 @@ body {
     flex-direction: column;
     justify-content: center;
 }
-.content-details ul {
+.content-details-Ingredients-preparation ul {
     width: 100%;
     height: 100%;
     display: flex;
@@ -152,7 +159,7 @@ body {
     align-items: start;
     justify-content: space-between;
 }
-.content-details li {
+.content-details-Ingredients-preparation li {
     font-size: clamp(8px,0.8rem,1rem);
     font-family: "Poppins", sans-serif;
     text-align: start;
@@ -187,6 +194,12 @@ body {
     text-align: center;
     opacity: 60%;
     font-weight: 600;
+}
+.buttom-details .btn-details-active{
+    color: var(--color-gold-metallic);
+    opacity:100%;
+    border-bottom: 2px solid ;
+    
 }
 .dish {
     display: flex;
