--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ body {
 
 .header-row-menu-nav ul {
     display: flex;
-    gap: 20px;
+    gap: 50px;
     list-style: none;
     text-decoration: none;
 }
@@ -121,7 +121,7 @@ body {
     width: 100%;
     height: 100vh;
     grid-template-rows: 1fr;
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: 4fr 1fr;
     grid-template-areas: "container-dish container-details";
 
 }
@@ -157,7 +157,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 .content-details-Ingredients-preparation li {
     font-size: clamp(8px,0.8rem,1rem);
