--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     --box-shadow-back-shadow-ligth: 2px 2px 10px var(--color-oxford-blue);
     --box-shadow-back-shadow-orange: 2px 2px 10px var(--color-hunyadi-yellow);
     --box-border-radius: 30px;
+    --transition: all 600ms ease;
     --gradient-ligth:linear-gradient(180deg, #ffffff 20%, #e5e5e5 100%);
     --gradient-orange:linear-gradient(180deg,#F7B446 20%, #FCA311 100%);
 }
@@ -115,16 +116,30 @@ body {
 
 .header-row-menu-nav a {
     display: block;
-    color: var(--color-orange-web);
+    color: var(--color-hunyadi-yellow);
     font-family: "Dancing Script", cursive;
     font-size: 1.8rem;
     font-weight: 500;
     text-decoration: none;
-    transition: all 300ms ease;
+    transition:var(--transition); 
+   
 }
-
 .header-row-menu-nav a:hover {
-    color: var(--color-hunyadi-yellow);
+    color: var(--color-orange-web);
+    border-bottom: solid 1px  var(--color-hunyadi-yellow);
+    animation: border-bottom  300ms linear;
+}
+@keyframes border-bottom{
+    0% {
+        width: 0%;
+    }
+    50% {
+        width: 50%;
+    }
+    100% {
+        width: 100%;
+    }
+
 }
 
 .container-grid-dish-details {
@@ -151,10 +166,28 @@ body {
 .mask-background-dish .svg-background {
     fill: var(--color-black);
 }
-
+.container-social-initial{
+    display: flex;
+    flex-direction: row;
+    gap: var(--gap-med);
+    width: 100%;
+    height: auto;
+}
+.brands{
+    width: 30px;
+    height: 30px;
+    color: var(--color-white);
+    transition: var(--transition);
+}
+.brands:hover{
+    transform: rotate(10deg);
+    scale: 1.1;
+    color: var(--color-hunyadi-yellow);
+}
 .container-dish {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     padding: var(--gap-min);
     width: 100%;
@@ -228,6 +261,7 @@ body {
     text-align: center;
     opacity: 60%;
     font-weight: 600;
+    transition: var(--transition);
 }
 
 .buttom-details .btn-details-active {
@@ -288,7 +322,7 @@ body {
     flex-direction: row;
     width: auto;
     height: 100%;
-gap: var(--gap-med);
+    gap: var(--gap-med);
 }
 
 .content-dish {
@@ -304,7 +338,7 @@ gap: var(--gap-med);
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: all 300ms ease;
+    transition: var(--transition);
 }
 .content-dish:hover {
  scale: 1.1;
