--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
 .header-menu {
     width: 100%;
     height: 8vh;
-    background: transparent;
+    background: linear-gradient(90deg, #000000 0%, #0A111F 100%);
     position: fixed;
     z-index: 100;
 }
@@ -63,7 +63,7 @@ body {
 }
 
 .header-row-logo a {
-    color: var(--color-oxford-blue);
+    color: var(--color-white);
     font-size: 4rem;
     font-family: "Dancing Script", cursive;
     font-optical-sizing: auto;
