refactor:atualizado informações

--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,11 @@ html {
 
 body {
     margin: 0;
-    width: 100%;
-    background-color: var(--color-white);
-}
+   color: var(--color-white);
 .header-menu {
     width: 100%;
     height: 8vh;
-    background: linear-gradient(90deg, #000000 0%, #0A111F 100%);
+    background: linear-gradient(90deg, #14213D 0%, #000000 100%);
     position: fixed;
     z-index: 100;
 }
@@ -149,14 +147,13 @@ body {
     left: 0;
     height: 100vh;
     width: auto;
-}
-
-.mask-background-dish svg {
-    height: 100%;
-    width: 100%;
+ 
 }
 .mask-background-dish .svg-background {
-    fill: var(--color-black);
+    height: 100%;
+    width: 100%;
+    fill: var(--color-oxford-blue);
+
 }
 .container-social-initial{
     display: flex;
@@ -224,6 +221,7 @@ body {
     align-items: center;
     justify-content: space-between;
     list-style-type: disc;
+    color: var(--color-black);
 }
 
 .details {
@@ -282,7 +280,7 @@ body {
     clip-path: circle();
     width: 410px;
     height: 410px;
-    background: var(--color-black);
+    background: radial-gradient(circle, #E5E5E5 40%, #FFFFFF 100%);
 
 }
 
@@ -363,4 +361,5 @@ body {
 .img-dish-mask img{
     width: 60px;
     height: 60px;
+}
 }
